[gd_scene load_steps=5 format=3 uid="uid://bcypvjbl47xd5"]

[ext_resource type="Texture2D" uid="uid://drtssacttunyc" path="res://assets/health_bar/under.png" id="1_juo7y"]
[ext_resource type="Script" path="res://scripts/health_ui.gd" id="1_qeims"]
[ext_resource type="Texture2D" uid="uid://ypoqksfl2c8w" path="res://assets/health_bar/progress.png" id="2_ki7ks"]
[ext_resource type="Resource" uid="uid://c2ghf4uta802a" path="res://resources/entity/player.tres" id="2_tgkoc"]

[node name="HealthUIContainer" type="HBoxContainer"]
script = ExtResource("1_qeims")
_player_resource = ExtResource("2_tgkoc")

[node name="HPTitle" type="ColorRect" parent="."]
clip_contents = true
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
color = Color(0, 0, 0, 0.301961)

[node name="HPLabel" type="Label" parent="HPTitle"]
layout_mode = 0
offset_right = 24.0
offset_bottom = 19.0
theme_override_font_sizes/font_size = 11
text = "HP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(160, 16)
layout_mode = 2
value = 100.0
nine_patch_stretch = true
texture_under = ExtResource("1_juo7y")
texture_progress = ExtResource("2_ki7ks")

[node name="CurrentHealth" type="Label" parent="."]
clip_contents = true
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="MaxHealth" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "/ 100"
vertical_alignment = 1
